--- a/XamarinTicTacToe/XamarinTicTacToe.Android/XamarinTicTacToe.Android.csproj
+++ b/XamarinTicTacToe/XamarinTicTacToe.Android/XamarinTicTacToe.Android.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -41,6 +41,9 @@
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ITCC.Logging.Core">
+      <HintPath>..\..\..\..\..\Users\b0-0b\.nuget\packages\itcc.logging.core\3.0.0\lib\netstandard1.3\ITCC.Logging.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -84,12 +87,18 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\drawable\" />
     <Folder Include="Resources\drawable-hdpi\" />
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
+    <Folder Include="Resources\drawable\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\XamarinTicTacToe.Engine\XamarinTicTacToe.Engine.csproj">
+      <Project>{A87BA4BC-EE62-44FB-9FE6-0DFC5A24E29E}</Project>
+      <Name>XamarinTicTacToe.Engine</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="..\XamarinTicTacToe\XamarinTicTacToe.projitems" Label="Shared" />
- <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
