--- a/XamarinTicTacToe/XamarinTicTacToe.UWP/XamarinTicTacToe.UWP.csproj
+++ b/XamarinTicTacToe/XamarinTicTacToe.UWP/XamarinTicTacToe.UWP.csproj
@@ -146,6 +146,17 @@
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="ITCC.Logging.Core">
+      <HintPath>..\..\..\..\..\Users\b0-0b\.nuget\packages\itcc.logging.core\3.0.0\lib\netstandard1.3\ITCC.Logging.Core.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\XamarinTicTacToe.Engine\XamarinTicTacToe.Engine.csproj">
+      <Project>{A87BA4BC-EE62-44FB-9FE6-0DFC5A24E29E}</Project>
+      <Name>XamarinTicTacToe.Engine</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="..\XamarinTicTacToe\XamarinTicTacToe.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
