Image cache implemented, highlight last move

--- a/XamarinTicTacToe/XamarinTicTacToe.UWP/XamarinTicTacToe.UWP.csproj
+++ b/XamarinTicTacToe/XamarinTicTacToe.UWP/XamarinTicTacToe.UWP.csproj
@@ -88,6 +88,9 @@
     <Prefer32Bit>true</Prefer32Bit>
     <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
