--- a/XamarinTicTacToe/XamarinTicTacToe.UWP/XamarinTicTacToe.UWP.csproj
+++ b/XamarinTicTacToe/XamarinTicTacToe.UWP/XamarinTicTacToe.UWP.csproj
@@ -146,8 +146,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="ITCC.Logging.Core">
